--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.24.1",
     "@vlcn.io/crsqlite-wasm": "^0.16.0",
+    "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "lucide-react": "^0.344.0",
@@ -21,6 +22,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
